styles/globals.css
@tailwind base;
@tailwind components;
@tailwind utilities;

html,
body {
  background-color: #202225;
  padding: 0;
  margin: 0;
  font-family: inter, BlinkMacSystemFont, Segoe UI, Roboto, Oxygen, Ubuntu,
    Cantarell, Fira Sans, Droid Sans, Helvetica Neue, sans-serif;
  overflow: hidden;
}

a {
  color: inherit;
  text-decoration: none;
}

* {
  box-sizing: border-box;
}

